--- a/index.Rmd
+++ b/index.Rmd
@@ -95,7 +95,7 @@ She was released and goes well, I hope
 ---
 template: clouds
 
-# Who I am?
+# Who am I?
 
 ???
 
@@ -261,7 +261,7 @@ class: center, middle
 background-image: url(images/Clouds.jpg)
 background-size: cover
 
-# Why am I here?
+# Before TAMUCC...
 
 ---
 class: middle, center
@@ -351,18 +351,12 @@ Functional dimensions]
 Proposition of new beta diversity metrics
 
 ---
-template: clouds
+template: clouds2
 class: middle, center
 background-image: url(images/Clouds.jpg)
 background-size: cover
 
----
-template: clouds
-class: middle, center
-background-image: url(images/Clouds.jpg)
-background-size: cover
-
-## Why am I here?
+# After PhD
 
 <img style="border-radius: 50%;" src="images/life-after-phd.png" width="450px" height="280"/>
 
@@ -377,9 +371,9 @@ background-size: cover
 ```{r echo=FALSE, out.width="90%"}
 knitr::include_graphics("images/Jetz_age_arrival.png")
 ```
-]
-
 .footnote[GitHub repo [here](https://github.com/GabrielNakamura/DivB_metrics)]
+
+]
 
 --
 
@@ -428,4 +422,11 @@ Ecological informatics [paper here](https://www.sciencedirect.com/science/articl
 - Computation of .green[Darwinian Shortfalls]
 ]
 
+---
+template: clouds2
+class: middle, center
+background-image: url(images/Clouds.jpg)
+background-size: cover
+
+# Now in TAMUCC
 
