--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Daru's lab pesentation"
-subtitle: "Gabriel Nakamura"
-author: Postdoctoral Research Associate (NSF Phyloregion Project)
+title: "Gabriel Nakamura"
+subtitle: "Postdoctoral Research Associate (NSF Phyloregion Project)"
+author: Ph.D Ecology
 date: "`r Sys.Date()`"
 output:
   xaringan::moon_reader:
@@ -277,15 +277,24 @@ class: center, middle
 background-image: url(images/Clouds.jpg)
 background-size: cover
 
-## What influence the distribution of biological diversity on earth?
+## What influences the distribution of biological diversity on earth?
+
+???
+Basically, this is the question that I've trying to answer with my work, in my research career
 
 --
 
 ### Reliable description of biodiversity patterns accross space and time
 
+???
+To answer this question I divide my work in two different research lines, that are complementary related with each other, the first one is focus on the development of numerical tools that can provide reliable description of biodiversity patterns accross space and time, focus mainly in patterns that occurs in large spatial and temporal scale,  with special focus on the development of numerical methods that allowed to describe alpha and beta diversity patterns.
+
 --
 
 ### Search for the factors that generate these patterns
+
+???
+And complementary I use try to find which factors explain these patterns, focused mainly on processes related to the evolution of organisms like speciation and historical dispersal.
 
 ---
 
@@ -302,7 +311,7 @@ Ecography paper [here](https://onlinelibrary.wiley.com/doi/full/10.1111/ecog.045
 ]
 
 ???
-So, during my Ph.D I developed numerical tools to describe different components of biological diversity, with special focus on the development of numerical methods that allowed to describe alpha and beta diversity patterns.
+First, to give you some examples of work that I've been developing to describe ecological patterns, during my Ph.D I developed numerical tools to describe a characteristic of biological diversty called dimensionality, basically it helped us to detect which  components of biological diversity are important to measure in order to effectivelly describe biodiversity in a community or metacommunity
 
 --
 
@@ -345,8 +354,8 @@ Functional dimensions]
 
 ???
 
-Still with the aim to effectively represent biological diversity, I also developed a comprehensive framework to capture different components of beta diversity. Basically we extent a proposition from Legendre and De Caceres
-proposed in 2010 to accommodate different facets of beta diversity, like phylogenetic and functional in 
+Still with the aim to effectively represent biological diversity, another example is this framework that we expand to capture different components of beta diversity. Basically we extent a proposition originally made by Legendre and De Caceres
+in 2010 to accommodate different facets of beta diversity, like phylogenetic and functional in 
 the same framework. This work is available in this paper in Ecology journal and the metrics can be calculated using the same package Dimensionality that I mentioned early.
 
 ---
@@ -392,7 +401,7 @@ knitr::include_graphics("images/Jetz_age_arrival.png")
 ]
 
 ???
-Now I'm developing methods in historical biogeography that disentangle the importance of in situ speciation
+To do so Now I'm developing numerical methods in historical biogeography that disentangle the importance of in situ speciation
 and historical dispersal to generate spatial patterns in Phylogenetic diversity of assemblages
 
 --
@@ -415,10 +424,11 @@ class: middle, center
 background-image: url(images/Clouds.jpg)
 background-size: cover
 
-## Biologically induced Side-effects 
+## Parallel projects (or, research induced side-effects)
 
 ???
-Like in a trip, the final destination is the objective, but in the middle of it you realize that there is a lot of other nice things that happen in the route
+Basically what I showed to you summarize my research interestings, but there is some side effects that comes together when I try to answer those big questions,
+Its Like in a trip, the final destination is the aim, but on the way you realize that there is a lot of other nice things that happen in the route, and here are some of these things that I discovered myself enjoying,
 
 ---
 class: middle, center
@@ -432,7 +442,7 @@ class: middle, center
   </div>
   
 ???
-In my personal trip to find the answer for what influence biodiversity patterns in space and time I found myself developing some R packages, particularly related to manipulation of phylogenetic information, like 
+In my personal trip to find out the answers for those questions I found myself developing some R packages, particularly related to manipulation of phylogenetic information, like 
 FishPhyloMaker, that allows to obtain phylogenetic trees for fish species, check scientific names and calculate Darwinian shortfalls.
 
 --
@@ -454,7 +464,7 @@ naturaList, with a series of spatial tools and for occurrence records and check 
 
 
 ???
-And mcfly, to model the effects of selection in species diversity in metacommunities
+And mcfly, that contains a set of tools to model the effects of selection in species diversity in metacommunities
 
 ---
 template: clouds2
@@ -477,7 +487,7 @@ class: middle, center
   </div>
   
 ???
-So, now my aim here is to improve the tools presented n phyloregion package
+So, now my aim here is to improve the tools presented in phyloregion package, and also keep on thing on questions related to the influence of evolutionary processes in diversity patterns of ecological communities
 
 --
 
